
7 Aug 2013: KM
    Github repo set up, obstacles, roads, time_stepper and test_script uploaded
    ChangeLog established for, uh, logging changes (notes on what's being committed, 
        branched, whatever)
    README gives startup instructions and summarizes classes and methods
