@@ -1,10 +1,7 @@
 #!/usr/bin/python
+__author__ = "Katie Malone (cmmalone.158@gmail.com)"
 
-def x(s):
-    return float(s/2)
-
-def y(s):
-    return float(s+3)
+import obstacles
 
 class Road:
     def __init__(self, x_func, y_func, name="El Camino"):
@@ -12,6 +9,7 @@ class Road:
         self.x_func = x_func
         self.y_func = y_func
         self.name = name
+        self.terminal_obstacle = obstacles.Terminal(self)
 
     def getXFunc(self):
         return self.x_func
@@ -36,7 +34,9 @@ class Road:
             if obstacle.getType() != "Light": #traffic lights don't move
                 obstacle.move(dt)
         self._orderObstacles()
-    
+        for obstacle in self.getObstacles(): # have all cars re-find their nearest obstacles
+            if obstacle.getType() != "Light":
+                obstacle.nearestObstacle = obstacle.getNearestObstacle() 
 
     def _addObstacle(self, obstacle):
         """ when you instantiate a car or light, you correspondingly
